0.13
  * Add multistations
  * On/Off transparency mode on main icon
  * Medium mode for view main icon
  * First icon show current weather and temperature
  
0.12 
  * Simple decor window popup
  * Automatical try connect to Internet
  * Hilldon information about connection refused refused or download success
  * Automatic redraw icon in display plugin since day per day
  * Automatic redraw first icon
  * Automatic update weather information from Internet
  * Fix error not updated when weather.com.xml.new exist
  
0.11
  * Add font color choice
  * Move temperature to top on information window
  * Fix problem click after preference dialog and update weather
  * Add Hilldon information window for update weather