@@ -3,6 +3,7 @@
   * On/Off transparency mode on main icon
   * Medium mode for view main icon
   * First icon show current weather and temperature
+  * Imperial units (Fahrenheit) of temperature
   
 0.12 
   * Simple decor window popup
